--- a/WebApplication1/Areas/coadmin/Views/facilidades/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/agregar.cshtml
@@ -67,7 +67,7 @@
                         <div class="form-group row">
                             <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                             <div class="col-sm-9">
-                                <input maxlength="30" class="form-control soloTexto" type="text" value="" name="first_name" required
+                                <input maxlength="20" class="form-control soloTexto" type="text" value="" name="first_name" required
                                        data-toggle="tooltip" title="Nombre de la facilidad"
                                        placeholder="Nombre" id="example-email-input">
                                 <small class="form-text text-muted">Nombre de la facilidad</small>
@@ -87,7 +87,7 @@
                         <div class="form-group row">
                             <label for="example-time-input" class="col-sm-3 col-form-label">Hora de inicio</label>
                             <div class="col-sm-2">
-                                <select required class="form-control" name="start_time"
+                                <select required class="form-control selectInicio" name="start_time"
                                         data-toggle="tooltip" title="Hora de inicio de disponibilidad" id="start_time">
                                     <option value="">--:--</option>
                                     @foreach (var item in Model.timeListIni)
@@ -112,7 +112,7 @@
                         <div class="form-group row">
                             <label for="example-time-input" class="col-sm-3 col-form-label">Hora de fin</label>
                             <div class="col-sm-2">
-                                <select required class="form-control" name="end_time"
+                                <select required class="form-control selectFinal" name="end_time"
                                         data-toggle="tooltip" title="Hora de fin de disponibilidad" id="end_time">
                                     <option value="">--:--</option>
                                     @foreach (var item in Model.timeListFin)
@@ -124,14 +124,14 @@
                             </div>
                         </div>
                         @*<div class="form-group row">
-                            <label for="example-time-input" class="col-sm-3 col-form-label">Hora de fin</label>
-                            <div class="col-sm-9">
-                                <input step="1" class="form-control" min="09:00" max="22:00" type="time" name="end_time" required
-                                       data-toggle="tooltip" title="Hora de fin de disponibilidad"
-                                       value="" id="example-time-input">
-                                <small class="form-text text-muted">Hora de fin de disponibilidad</small>
-                            </div>
-                        </div>*@
+            <label for="example-time-input" class="col-sm-3 col-form-label">Hora de fin</label>
+            <div class="col-sm-9">
+                <input step="1" class="form-control" min="09:00" max="22:00" type="time" name="end_time" required
+                       data-toggle="tooltip" title="Hora de fin de disponibilidad"
+                       value="" id="example-time-input">
+                <small class="form-text text-muted">Hora de fin de disponibilidad</small>
+            </div>
+        </div>*@
                         <div class="form-divider"></div>
 
                         <div class="form-group row">
@@ -175,6 +175,10 @@
                                 </div>
                             </div>
                         </div>
+                        <div id="alertaHoras" class="alert alert-danger fade show" style="display:none" role="alert">
+                            <strong>Error!</strong> La hora de inicio no puede ser mayor a la hora de fin                            
+                        </div>
+
                         <div class="form-divider"></div>
                         <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                         <a href="@Url.Action("disponibles", "facilidades", new { area ="coadmin" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
@@ -208,4 +212,6 @@
 
 
     })();
+
+
 </script>
