--- a/WebApplication1/Areas/webmaster/Views/administradores/ver.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/administradores/ver.cshtml
@@ -36,7 +36,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "administradores", new { area = "webmaster" })" class="text-success">Listado de administradores</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "administradores", new { area = "webmaster" })" class="text-success">Administradores</a></li>
                             <li class="breadcrumb-item active">Ver administrador</li>
                         </ul>
                     </div>
