--- a/WebApplication1/Areas/webmaster/Views/plantillas/crear.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/plantillas/crear.cshtml
@@ -19,8 +19,8 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "plantillas", new { area = "webmaster" })" class="text-success">Listado de plantillas</a></li>
-                            <li class="breadcrumb-item active">Crear plantillas de email</li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "plantillas", new { area = "webmaster" })" class="text-success">Plantillas</a></li>
+                            <li class="breadcrumb-item active">Crear plantilla</li>
                         </ul>
                     </div>
                 </div>
