--- a/WebApplication1/Areas/webmaster/Views/plantillas/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/plantillas/listado.cshtml
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster"  })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Plantillas de email</li>
+                            <li class="breadcrumb-item active">Plantillas</li>
                         </ul>
                     </div>
                 </div>
