--- a/WebApplication1/Areas/webmaster/Views/suplidores/editarCategoria.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/suplidores/editarCategoria.cshtml
@@ -36,7 +36,8 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("listadoCategorias", "suplidores", new { area = "webmaster" })" class="text-success">Listado de categorías</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "suplidores", new { area = "webmaster" })" class="text-success">Suplidores</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listadoCategorias", "suplidores", new { area = "webmaster" })" class="text-success">Categorías</a></li>
                             <li class="breadcrumb-item active">Editar categoría</li>
                         </ul>
                     </div>
