--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -218,11 +218,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                     <li>
                                         @if (Model.side_sub_menu == "bancos_listado")
                                         {
-                                            <a href="@Url.Action("listadoCuentas", "cuotas")" class="active">Listado de cuentas de banco y CC</a>
+                                            <a href="@Url.Action("listadoCuentas", "cuotas")" class="active">Listado de cuentas de banco</a>
                                         }
                                         else
                                         {
-                                    <a href="@Url.Action("listadoCuentas", "cuotas")">Listado de cuentas de banco y CC</a>
+                                    <a href="@Url.Action("listadoCuentas", "cuotas")">Listado de cuentas de banco</a>
                                         }
                                     </li>
                                 </ul>
@@ -233,7 +233,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                 <ul class="list-unstyled">
                                     <li><a href="@Url.Action("balance", "cuotas")">Balance pendiente</a></li>
                                     <li><a href="@Url.Action("estado", "cuotas")">Estados de cuenta</a></li>
-                                    <li><a href="@Url.Action("listadoCuentas", "cuotas")">Listado de cuentas de banco y CC</a></li>
+                                    <li><a href="@Url.Action("listadoCuentas", "cuotas")">Listado de cuentas de banco</a></li>
                                 </ul>
                             }
                         </li>
