--- a/WebApplication1/Areas/webmaster/Views/administradores/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/administradores/editar.cshtml
@@ -36,7 +36,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "administradores", new { area = "webmaster" })" class="text-success">Listado de administradores</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "administradores", new { area = "webmaster" })" class="text-success">Administradores</a></li>
                             <li class="breadcrumb-item active">Editar administrador</li>
                         </ul>
                     </div>
@@ -102,7 +102,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="30" class="form-control soloTexto" type="text" value="@Model.editAdmin.first_name1"
+                                    <input maxlength="20" class="form-control soloTexto" type="text" value="@Model.editAdmin.first_name1"
                                            placeholder="Nombre" id="example-email-input" name="first_name1" required
                                            data-toggle="tooltip" />
                                     @*<small class="form-text text-muted">Nombre del Administrador</small>*@
