--- a/WebApplication1/Areas/webmaster/Views/comunidades/agregar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunidades/agregar.cshtml
@@ -21,7 +21,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "comunidades", new { area = "webmaster" })" class="text-success">Listado de comunidades</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "comunidades", new { area = "webmaster" })" class="text-success">Comunidades</a></li>
                             <li class="breadcrumb-item active">Agregar comunidad</li>
                         </ul>
                     </div>
@@ -57,7 +57,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="30" class="form-control" type="text" value="" name="first_name"
+                                    <input maxlength="20" class="form-control" type="text" value="" name="first_name"
                                            data-toggle="tooltip" title="Nombre de la comunidad"
                                            placeholder="Nombre" id="example-email-input" required/>
                                     <small class="form-text text-muted">Nombre de la comunidad</small>
