--- a/WebApplication1/Areas/webmaster/Views/comunidades/ver.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunidades/ver.cshtml
@@ -21,7 +21,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "comunidades", new { area = "webmaster" })" class="text-success">Listado de comunidades</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "comunidades", new { area = "webmaster" })" class="text-success">Comunidades</a></li>
                             <li class="breadcrumb-item active">Ver comunidad</li>
                         </ul>
                     </div>
