--- a/WebApplication1/Areas/webmaster/Views/suplidores/agregar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/suplidores/agregar.cshtml
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "suplidores", new { area = "webmaster" })" class="text-success">Listado de suplidores</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "suplidores", new { area = "webmaster" })" class="text-success">Suplidores</a></li>
                             <li class="breadcrumb-item active">Agregar suplidor</li>
                         </ul>
                     </div>
@@ -75,7 +75,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Compañía suplidor</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="30" class="form-control soloTexto" type="text" value="" name="company" required
+                                    <input maxlength="20" class="form-control soloTexto" type="text" value="" name="company" required
                                            data-toggle="tooltip" title="Nombre de la compañía del suplidor"
                                            placeholder="Compañía suplidor" id="example-email-input">
                                     <small class="form-text text-muted">Nombre de la compañía del suplidor</small>
@@ -85,7 +85,7 @@
                             <div class="form-group row">
                                 <label for="example-name1-input" class="col-sm-3 col-form-label">Nombre de contacto</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="30" class="form-control soloTexto" type="text" value="" name="contact_name" required
+                                    <input maxlength="20" class="form-control soloTexto" type="text" value="" name="contact_name" required
                                            data-toggle="tooltip" title="Nombre de contacto del suplidor"
                                            placeholder="Nombre de contacto" id="example-name1-input">
                                     <small class="form-text text-muted">Nombre de contacto del suplidor</small>
