--- a/WebApplication1/Areas/webmaster/Views/suplidores/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/suplidores/editar.cshtml
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "suplidores", new { area = "webmaster" })" class="text-success">Listado de suplidores</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "suplidores", new { area = "webmaster" })" class="text-success">Suplidores</a></li>
                             <li class="breadcrumb-item active">Editar suplidor</li>
                         </ul>
                     </div>
@@ -84,7 +84,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Compañía suplidor</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="30" class="form-control soloTexto" type="text" value="@Model.editSupplier.company"
+                                    <input maxlength="20" class="form-control soloTexto" type="text" value="@Model.editSupplier.company"
                                            data-toggle="tooltip" title="Nombre de la compañía del suplidor"
                                            placeholder="Compañía suplidor" id="example-email-input" name="company" required />
                                     @*<small class="form-text text-muted">Nombre de la compañía del suplidor</small>*@
