--- a/WebApplication1/Areas/webmaster/Views/webmaster/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/webmaster/listado.cshtml
@@ -18,7 +18,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Listado de webmasters</li>
+                            <li class="breadcrumb-item active">Webmasters</li>
                         </ul>
                     </div>
                 </div>
