--- a/WebApplication1/Areas/webmaster/Views/webmaster/ver.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/webmaster/ver.cshtml
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "webmaster", new { area = "webmaster" })" class="text-success">Listado de webmasters</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "webmaster", new { area = "webmaster" })" class="text-success">Webmasters</a></li>
                             <li class="breadcrumb-item active">Ver webmaster</li>
                         </ul>
                     </div>
