--- a/WebApplication1/Views/comunicaciones/agregarblog.cshtml
+++ b/WebApplication1/Views/comunicaciones/agregarblog.cshtml
@@ -24,7 +24,7 @@
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
-                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("community", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
                             <li class="breadcrumb-item"><a href="@Url.Action("blog", "comunicaciones")" class="text-success"> Blog</a></li>
                             <li class="breadcrumb-item active">Agregar entrada</li>
                         </ul>
