--- a/WebApplication1/Views/comunicaciones/blog.cshtml
+++ b/WebApplication1/Views/comunicaciones/blog.cshtml
@@ -18,7 +18,7 @@
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
-                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("community", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
                             <li class="breadcrumb-item active">Blog</li>
                         </ul>
                     </div>
@@ -41,6 +41,17 @@
             </div>
         </div><!--end row-->
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
@@ -49,8 +60,8 @@
                                 <h5 class="d-inline-block">Últimas entradas</h5>
                             </div>
                             <div class="col-md-6 mb-1">
-                               
-                                <a href="@Url.Action("agregarblog", "comunicaciones")"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Nueva entrada</button></a>                                                                                               
+
+                                <a href="@Url.Action("agregarblog", "comunicaciones")"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Nueva entrada</button></a>
                             </div>
                         </div>
                         <div class="table-responsive">
@@ -91,7 +102,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="@Url.Action("panel", "control")"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("community", "control")"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
