--- a/WebApplication1/Views/contacto/informacion.cshtml
+++ b/WebApplication1/Views/contacto/informacion.cshtml
@@ -18,7 +18,7 @@
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
-                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("community", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
                             <li class="breadcrumb-item active">Información de contacto</li>
                         </ul>
                     </div>
