--- a/WebApplication1/Views/cuotas/listadoCuentas.cshtml
+++ b/WebApplication1/Views/cuotas/listadoCuentas.cshtml
@@ -18,7 +18,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("community", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Listado de cuentas de banco y CC</li>
+                            <li class="breadcrumb-item active">Listado de cuentas de banco</li>
                         </ul>
                     </div>
                 </div>
