--- a/WebApplication1/Views/tareas/completadas.cshtml
+++ b/WebApplication1/Views/tareas/completadas.cshtml
@@ -17,7 +17,7 @@
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
-                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("community", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
                             <li class="breadcrumb-item"><a href="@Url.Action("listado", "tareas")" class="text-success"> Tareas</a></li>
                             <li class="breadcrumb-item active">Tareas completadas</li>
                         </ul>
