--- a/WebApplication1/Views/tareas/sugerirtarea.cshtml
+++ b/WebApplication1/Views/tareas/sugerirtarea.cshtml
@@ -30,7 +30,7 @@
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
-                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("community", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
                             <li class="breadcrumb-item"><a href="@Url.Action("listado", "tareas")" class="text-success"> Tareas</a></li>
                             <li class="breadcrumb-item active">Sugerir tarea</li>
                         </ul>
@@ -60,7 +60,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" name="task_name" type="text" required
+                                    <input maxlength="20" class="form-control soloTexto" name="task_name" type="text" required
                                            data-toggle="tooltip" title="Nombre de la tarea"
                                            value="" placeholder="Nombre" id="task-name-input">
                                     <small class="form-text text-muted">Nombre de la tarea</small>
@@ -70,7 +70,7 @@
                             <div class="form-group row">
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Descripción</label>
                                 <div class="col-sm-9">
-                                    <textarea class="form-control" rows="3" placeholder="Descripción"
+                                    <textarea maxlength="40" class="form-control" rows="3" placeholder="Descripción"
                                               data-toggle="tooltip" title="Descripción de la tarea"
                                               name="description"></textarea>
                                     <small class="form-text text-muted">Descripción de la tarea</small>
@@ -80,7 +80,7 @@
                             <div class="form-group row">
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Comentarios</label>
                                 <div class="col-sm-9">
-                                    <textarea class="form-control" rows="3" placeholder="Comentarios"
+                                    <textarea maxlength="40" class="form-control" rows="3" placeholder="Comentarios"
                                               data-toggle="tooltip" title="Comentarios del administrador"
                                               name="commentary"></textarea>
                                     <small class="form-text text-muted">Comentarios del administrador</small>
@@ -90,7 +90,7 @@
                             <div class="form-group row">
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Responsable</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" required
+                                    <input maxlength="20" class="form-control" type="text" value="" required
                                            data-toggle="tooltip" title="Nombre de la persona responsable"
                                            placeholder="Responsable" name="responsable" id="example-lastname1-input">
                                     <small class="form-text text-muted">Nombre de la persona responsable</small>
@@ -100,7 +100,7 @@
                             <div class="form-group row">
                                 <label for="example-date-input" class="col-sm-3 col-form-label">Fecha</label>
                                 <div class="col-sm-4">
-                                    <input min="" class="form-control" type="date" autocomplete="off"
+                                    <input class="form-control" type="date" autocomplete="off"
                                            data-toggle="tooltip"  title="Mes / día / año | Fecha de registro de la tarea"
                                            name="start_date" required
                                            value="" id="example-date-input">
