--- a/WebApplication1/Views/uso/terminos.cshtml
+++ b/WebApplication1/Views/uso/terminos.cshtml
@@ -18,7 +18,7 @@
                         </div>
                         <div class="float-right">
                             <ul class="breadcrumb float-md-right">
-                                <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                                <li class="breadcrumb-item"><a href="@Url.Action("community", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
                                 <li class="breadcrumb-item active">Términos de uso</li>
                             </ul>
                         </div>
@@ -101,7 +101,7 @@
             <!-- back button -->
             <div class="row pb-4">
                 <div class="col-md-6">
-                    <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                    <a href="@Url.Action("community", "control")"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
                 </div>
             </div>
             <!-- end back button -->
